fix(Widget): fix widget height when collapsed; feat(Product): added removal confirmation popover; fix(Auth): fixed registering already existing user;

--- a/src/components/Widget/Widget.module.scss
+++ b/src/components/Widget/Widget.module.scss
@@ -7,6 +7,10 @@
   @include clearfix();
 }
 
+:global .widget.collapsed {
+  min-height: unset;
+}
+
 .widget {
   display: block;
   position: relative;
