--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -556,6 +556,10 @@ h6,
   border: none;
 
   @include box-shadow(none);
+
+  .popover-header {
+    border-bottom: none;
+  }
 }
 
 .popover-content {
